--- a/css/styles.css
+++ b/css/styles.css
@@ -26,14 +26,22 @@ body{
     padding: 0;
     margin: 0;
 }
-
+img{
+    max-width: 100%;
+}
 .page-header{
     background-color: #FFFFFF;
 }
 
+/* main nav  */
+.main-nav{
+    display: flex;
+    align-items: center;
+}
+
 .container{
+    padding: 0 15px;
     width: 1200px;
-    height: 80px;
     margin-left: auto;
     margin-right: auto;
     outline: solid red;
@@ -61,11 +69,7 @@ text-decoration: none;
     color: #FFFFFF;
 }
 
-/* main nav  */
-.main-nav{
-    display: flex;
-    align-items: center;
-}
+
 
 /* site-nav section */
 .site-nav{
@@ -165,8 +169,8 @@ text-decoration: none;
 }
 /* features section */
 .features-container{
-    margin-left: 215px;
-    margin-right: 215px;
+    /* margin-left: 215px;
+    margin-right: 215px; */
     margin-bottom: 94px;
 }
 
@@ -202,13 +206,9 @@ text-decoration: none;
 }
 
 /* Чем мы занимаемся section  */
-.our-job-container{
-    margin-left: 215px;
-    margin-right: 215px;
-    margin-bottom: 94px;
-}
+
 .our-job{
-    margin-top: 0px;
+    margin-top: 94px;
     margin-bottom: 50px;
 
     outline: solid red;
@@ -219,13 +219,23 @@ text-decoration: none;
     list-style: none;
     
 }
+.photo-job{
+    margin-right: 30px;
+    margin-bottom: 94px;
+}
+.our-job-flex{
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+   
+}
+
 /* team section */
 .team-section-bg-color-outside{
     background-color: #F5F4FA;
 }
 .team-section-bg-color{
-    margin-left: 215px;
-    margin-right: 215px;
+    
     padding-bottom: 94px;
 
     outline: solid red;
@@ -233,16 +243,15 @@ text-decoration: none;
     
 }
 .team-section{ 
+    margin-top: 94px;
     margin-bottom: 50px;
-
+    padding-top: 94px;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     text-align: Center;
     list-style: none;
      
-    
-
 }
 .name-member-section{  
     margin-top: 30px;
@@ -251,22 +260,26 @@ text-decoration: none;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.17;  
-    
+    text-align: center;
 }
 
+.photo-team{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-right: -30px;
+    
+}
 .photo{
+    
     padding-left: 0px;
     padding-right: 0px;
     padding-top: 0px;
-    padding-bottom: 108px;
-
+    margin-right: 30px;
     list-style: none;
     background-color: #FFFFFF;
-    
 }
-.photo-padding{
-    padding: 0px;
-}
+
 .second-text-team{
     margin-top: 0px;
     margin-bottom: 30px;
@@ -275,7 +288,7 @@ text-decoration: none;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.17;
-    
+    text-align: center;
     
 }
 
@@ -288,10 +301,10 @@ text-decoration: none;
 .footer-section{
     margin-left: auto;
     margin-right: auto;
-
+    margin-top: 94px;
     background-color:var(--background-color-1);
     width: 1230px;
-    height: 80px;
+    
     
 }
 .contact-footer-section{
@@ -320,31 +333,35 @@ text-decoration: none;
     align-items: center;
 }
 
+ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
 
 .button-type{
     display: flex;
+    padding: 0px;
+    margin-bottom: 50px;
     font-family: Roboto,sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.6;
     text-align: center;
     list-style: none;
-    
+    justify-content: center;
 }
 .button-portfolio{
     padding: 6px 22px;
     text-align: center;
     border: 1px solid transparent;
     border-radius: 4px;
-    margin-bottom: 50px;
     background-color: #F5F4FA; 
     font-family: Roboto,sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.6;
     letter-spacing: 0.03em;
-    min-width: 145px;
-    
 }
 
 
@@ -359,24 +376,23 @@ text-decoration: none;
     background-color: var(--accent-color);
 }
 /* Content section */
-.porfolio-flex-container{
-    display: flex;
-    flex-wrap: wrap;
-}
+
 .photo-portfolio{
-    margin-bottom: 30px;
-    margin-right: 215px;
-    margin-left: 215px;
-    list-style: none;
-    width: 370px;
-    background-color: tomato;
-}
- .photo-portfolio-size{
-    padding: 0px;   
-}
-.photo-portfolio-size:nth-child(3n){
     margin-right: 30px;
+    margin-bottom: 30px;
+    
 }
+ .photo-portfolio-flex{ 
+    padding: 0px; 
+    display: flex;
+    flex-wrap: wrap; 
+    margin-right: -30px;
+    margin-bottom: -30px;
+}
+.photo-portfolio:nth-last-child(-n + 3){
+    margin-bottom: 0;
+}
+
 .photo-decoration{
     text-decoration: none;
 }
@@ -391,7 +407,6 @@ text-decoration: none;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
-    
     }
 .second-content-header{
     margin-top: 0px;
@@ -403,7 +418,7 @@ text-decoration: none;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.8;
-    
+      
 }
 
 
