--- a/css/styles.css
+++ b/css/styles.css
@@ -298,7 +298,14 @@ text-decoration: none;
     
     
 }
-
+.logo-footer{
+margin-top: 60px;
+font-family: Raleway,sans-serif;
+font-weight: 700; 
+font-size: 26px;
+line-height: 1.19;
+text-decoration: none;
+}
 .contact-flex{
     display: inline;
 }
