--- a/css/styles.css
+++ b/css/styles.css
@@ -134,11 +134,11 @@ text-decoration: none;
     margin-bottom: 94px;
     padding-top: 200px;
     padding-bottom: 200px;
-    
+    margin-left: auto;
+    margin-right: auto;
     background-color:var(--background-color-1);        
-    text-align:Center;  
-
-    
+    text-align:Center; 
+ 
 }
 
 .hero-text{
