--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,8 @@ body{
 }
 img{
     max-width: 100%;
+    display: block;
+    height: auto;
 }
 .page-header{
     background-color: #FFFFFF;
@@ -44,9 +46,11 @@ p, h1, h2, h3, h4, h5, h6 {
 
 .container{
     padding: 0 15px;
-    width: 1230px;
+    width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    outline: solid red;
+    background-color: tomato;
 }
 
 
@@ -404,33 +408,51 @@ ul{
     background-color: var(--accent-color);
 }
 /* Content section */
-
-.photo-portfolio{
-    background: #FFFFFF;
-    border: 1px solid #EEEEEE;
-    box-sizing: border-box;
-    
-    margin-right: 30px;
-    margin-bottom: 30px;
-    
-}
- .photo-portfolio-flex{ 
-    padding: 0px; 
+.photo-portfolio-flex{ 
+    padding: 0; 
     display: flex;
     flex-wrap: wrap; 
     margin-right: -30px;
     margin-bottom: -30px;
 }
+
+.photo-portfolio{
+    /* background: #FFFFFF;
+    border: 1px solid #EEEEEE;
+    box-sizing: border-box; */
+    
+    margin-bottom: 30px;
+    margin-right: 30px;
+    
+}
+ 
+.photo-portfolio:nth-last-child(3n){
+    margin-right: 0;
+}
 .photo-portfolio:nth-last-child(-n + 3){
     margin-bottom: 0;
 }
 
+
+
 .photo-decoration{
     text-decoration: none;
 }
+
+
+.content-size{
+    background: #FFFFFF;
+    border: 1px solid #EEEEEE;
+    box-sizing: border-box;
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 24px;
+    padding-right: 24px;
+}
+
     .content-header{
     margin-bottom: 4px;
-    padding-left: 24px;
 
     color: #212121;
     font-weight: 700;
@@ -441,10 +463,7 @@ ul{
     }
 .second-content-header{
     margin-top: 0px;
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    
     color: var(--title-text-color);
     font-weight: 400;
     font-size: 16px;
