--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,6 @@ p, h1, h2, h3, h4, h5, h6 {
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    
 }
 
 
@@ -421,7 +420,9 @@ ul{
     
 }
  
-
+.photo-portfolio:nth-last-child(-n + 3){
+    margin-bottom: 0;
+}
 
 
 .photo-decoration{
